--- a/app/views/pages/index.erb
+++ b/app/views/pages/index.erb
@@ -1,5 +1,6 @@
 <h1>Hello! This is the Pages/Index page</h1>
 <p>This is the response for your request:</p>
 
-<%= p @result %>
-<%= p @stops %>
+
+<p>This is the stops <%= p @stops %> </p>
+<p>This is the stops <%= p @result %> </p>
