--- a/app/views/twilio/index.html.erb
+++ b/app/views/twilio/index.html.erb
@@ -1,5 +1,3 @@
-<h1>Hello!</h1>
- <p> Template</p>
+<h1>Congratulations! You've made your first step towards becoming a better, more transportationally-savvy citizen...Now sit back, relax and we'll send you a text when you're close to your stop.</h1>
 
- <%=button_to "New Trip", {action: "new"}, method: :get %>
 
