prepares end-of-day demo

--- a/app/views/twilio/index.html.erb
+++ b/app/views/twilio/index.html.erb
@@ -1,3 +1,5 @@
-<h1>Congratulations! You've made your first step towards becoming a better, more transportationally-savvy citizen...Now sit back, relax and we'll send you a text when you're close to your stop.</h1>
+<h1>Congratulations!</h1>
+<h2>You've made the first step towards becoming a better, more transportationally-savvy citizen...</h2>
+<h2>Now sit back, relax and we'll send you a text when you're close to your stop.</h2>
 
 
