HTML and CSS styling for html pages

--- a/app/views/pages/contact_us.html.erb.html
+++ b/app/views/pages/contact_us.html.erb.html
@@ -15,17 +15,14 @@
 
   <section class = "content">
     <p>
-      Muni Newbie contact email
-      muni contact information
+      Muni Newbie contact email: MuniNewb@gmail.com
+      <br>
+      <a href= "https://www.sfmta.com/contact">Muni Contact Information</a>
     </p>
-      <!-- copy and paste as many sections as you want to add paragraphs -->
   </section>
-  <section class = "side-panel">
-
-</section>
 
 <footer>
-
+Enjoy the Ride
 </footer>
 </body>
 </html>
