--- a/app/views/pages/riding_muni.html.erb.html
+++ b/app/views/pages/riding_muni.html.erb.html
@@ -40,12 +40,10 @@
 
       <!-- copy and paste as many sections as you want to add paragraphs -->
   </section>
-  <section class = "side-panel">
 
-</section>
 
 <footer>
-
+Enjoy the ride!
 </footer>
 </body>
 </html>
