--- a/app/views/pages/tips_tricks.html.erb.html
+++ b/app/views/pages/tips_tricks.html.erb.html
@@ -16,11 +16,11 @@
   <section class = "content">
     <h3>Bus Unspoken Rules</h3>
       <p>Set belongings on the floor between your legs so they don't bump into anyone.  Give up your seat to the elderly, disabled, pregnant, or really tired. Don't talk loudly on your cell phone or listen to music really loudly. Be courteous and respect others' space. Don't breathe on another person's neck.
-
+      <br>
       If it's after 6:30 pm, you can ask the driver to let you off between stops. San Francisco brings out a whole different crowd after dark, so be safe!
-
+      <br>
       Holidays free after 8. Don't drink and drive!
-
+      <br>
       Keep your belongings close to avoid any theft. Nothing will ruin your day faster than your wallet being stolen.</p>
 
 
@@ -28,13 +28,14 @@
       <p>Lose Something? Submit a request here:
         <a href= "https://www.sfmta.com/getting-around/transit/muni-lost-found"> SFMTA Lost and Found</a></p>
       <!-- copy and paste as many sections as you want to add paragraphs -->
-  </section>
-  <section class = "side-panel">
 
-</section>
+    <h3>Real Life Stories from Real Life Riders</h3>
+      <p>"I was on the bus with my best friend Dave. We were REALLY drunk. (Muni is happy to accomodate all people, inebriated or otherwise). We conducted ourselves respectfully, paid our fare, and seated ourselves in the back of the bus. Though we were giddy from the beers of the evening, things took a turn when we were suddenly engaged by Muni's more unsavory characters.  This man was wearing two different shoes, was under the influence of something likely illicit, and spoke to the people around him in less than desirable language. Case in point; Muni is a shared, public space. It ferries around all walks of life, the good and the bad. Aside from being one of the cheapest ways to commute in SF, it makes frequent convenient stops. If you are creeped out by the goons of SF squatting on the bus, avoid eye contact, use your feet, and proceed to the nearest exit. Life goes on." - Anonymous </p>
+  </section>
+
 
 <footer>
-
+Enjoy the ride!
 </footer>
 </body>
 </html>
